--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,3 +12,53 @@ import FAQs from '~/components/widgets/FAQs.astro';
 import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
+const metadata = {
+  title: 'HealthBlog — Credible source for all your health related problems.',
+  ignoreTitleTemplate: true,
+};
+---
+
+<Layout metadata={metadata}>
+  <!-- Hero Widget ******************* -->
+
+  <Hero
+    actions={[
+      {
+        variant: 'primary',
+        text: 'Follow',
+        href: 'https://instagram.com/mayankk0205',
+        target: '_blank',
+        icon: 'tabler:download',
+      },
+      { text: 'Learn more', href: '#features' },
+    ]}
+    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
+  >
+    <Fragment slot="title">
+      Welcome you all in this <span class="hidden xl:inline">amazing project.</span>
+      <span class="text-accent dark:text-white"> Health</span>Blog
+
+    </Fragment>
+
+    <Fragment slot="subtitle">
+      <span class="hidden sm:inline">
+        <span class="font-semibold">Healthblog</span> Medical Professional help just a click away!</span
+      >
+      <span class="block mb-1 sm:hidden font-bold text-blue-600"></span>
+    It is advised to seek help from registered medical practioner, Content here is for educational purpose only.
+    </Fragment>
+  </Hero>
+
+
+
+  
+    <Fragment slot="title">
+      Health&nbsp;+&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap">Blog</span>
+    </Fragment>
+
+    <Fragment slot="subtitle">
+      Be very surprised by these huge fake numbers you are seeing on this page. <br class="hidden md:inline" />Don't
+      waste more time! :P
+    </Fragment>
+  </CallToAction>
+</Layout>
