--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -17,7 +17,7 @@ import Content from '~/components/widgets/Content.astro';
 
     <Fragment slot="subtitle">
       <span class=" sm:inline">
-        <span class="font-semibold">Healthblog</span>
+        <span class="font-semibold">Medr</span>
         <div id="search"></div>
       </span>
       <span class="block mb-1 sm: font-bold text-blue-600"></span>
