--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -27,7 +27,7 @@ import Layout from '~/layouts/PageLayout.astro';
       new PagefindUI({
         element: "#search",
         resetStyles: false,
-        showImages: false,
+        showImages: true,
         placeholder: "Search health articles…",
       });
     });
